[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-navigator"
version = "0.1.0"
description = "Simplified LLM API calls and prompt construction for GPT, Claude, Gemini and more"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "liyinghao", email = "shiyi.yinghao@gmail.com" },
]
keywords = ["llm", "ai", "openai", "anthropic", "gemini", "prompt", "structured-output"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.35"]
gemini = ["google-generativeai>=0.7"]
image = ["pillow>=10.0"]
all = [
    "openai>=1.0",
    "anthropic>=0.35",
    "google-generativeai>=0.7",
    "pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Repository = "https://github.com/shiyi-yinghao/ai_navigator"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_navigator"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
